--- a/core/config/docs/chains-cosmos.toml
+++ b/core/config/docs/chains-cosmos.toml
@@ -21,6 +21,10 @@ OCR2CachePollPeriod = '4s' # Default
 OCR2CacheTTL = '1m' # Default
 # TxMsgTimeout is the maximum age for resending transaction before they expire.
 TxMsgTimeout = '10m' # Default
+# Bech32Prefix is the human-readable prefix for addresses on this Cosmos chain. See https://docs.cosmos.network/v0.47/spec/addresses/bech32.
+Bech32Prefix = 'wasm' # Example
+# FeeToken is the token denomination which is being used to pay gas fees on this chain.
+FeeToken = 'uatom' # Example
 
 [[Cosmos.Nodes]]
 # Name is a unique (per-chain) identifier for this node.
