--- a/core/web/resolver/testdata/config-full.toml
+++ b/core/web/resolver/testdata/config-full.toml
@@ -328,6 +328,8 @@ MaxMsgsPerBatch = 17
 OCR2CachePollPeriod = '1m0s'
 OCR2CacheTTL = '1h0m0s'
 TxMsgTimeout = '1s'
+Bech32Prefix = 'wasm'
+FeeToken = 'ucosm'
 
 [[Cosmos.Nodes]]
 Name = 'primary'
