--- a/core/web/resolver/testdata/config-multi-chain-effective.toml
+++ b/core/web/resolver/testdata/config-multi-chain-effective.toml
@@ -460,6 +460,8 @@ MaxMsgsPerBatch = 13
 OCR2CachePollPeriod = '4s'
 OCR2CacheTTL = '1m0s'
 TxMsgTimeout = '10m0s'
+Bech32Prefix = 'wasm'
+FeeToken = 'ucosm'
 
 [[Cosmos.Nodes]]
 Name = 'primary'
@@ -476,6 +478,8 @@ MaxMsgsPerBatch = 100
 OCR2CachePollPeriod = '4s'
 OCR2CacheTTL = '1m0s'
 TxMsgTimeout = '10m0s'
+Bech32Prefix = 'wasm'
+FeeToken = 'ucosm'
 
 [[Cosmos.Nodes]]
 Name = 'secondary'
