--- a/core/web/resolver/testdata/config-multi-chain.toml
+++ b/core/web/resolver/testdata/config-multi-chain.toml
@@ -72,6 +72,8 @@ WSURL = 'wss://web.socket/test/bar'
 [[Cosmos]]
 ChainID = 'Ibiza-808'
 MaxMsgsPerBatch = 13
+Bech32Prefix = 'wasm'
+FeeToken = 'ucosm'
 
 [[Cosmos.Nodes]]
 Name = 'primary'
@@ -80,6 +82,8 @@ TendermintURL = 'http://columbus.cosmos.com'
 [[Cosmos]]
 ChainID = 'Malaga-420'
 BlocksUntilTxTimeout = 20
+Bech32Prefix = 'wasm'
+FeeToken = 'ucosm'
 
 [[Cosmos.Nodes]]
 Name = 'secondary'
