--- a/.github/workflows/on-demand-ocr-soak-test.yml
+++ b/.github/workflows/on-demand-ocr-soak-test.yml
@@ -17,7 +17,10 @@ on:
           - "BSC_MAINNET"
           - "BSC_TESTNET"
           - "SCROLL_SEPOLIA"
-          - "SCROLL_MAINNET"   
+          - "SCROLL_MAINNET"
+          - "POLYGON_ZKEVM_GOERLI"
+		      - "POLYGON_ZKEVM_MAINNET"
+
       fundingPrivateKey:
         description: Private funding key (Skip for Simulated)
         required: false
