make HighestDifficulty the default NodeSelection algorithm for BSC
retain SyncThreshold by bumping to 20 due to average block difficulty being 2

--- a/core/chains/evm/config/toml/defaults/BSC_Mainnet.toml
+++ b/core/chains/evm/config/toml/defaults/BSC_Mainnet.toml
@@ -34,4 +34,5 @@ ContractTransmitterTransmitTimeout = '2s'
 ObservationGracePeriod = '500ms'
 
 [NodePool]
-SyncThreshold = 10
+SyncThreshold = 20
+SelectionMode = 'TotalDifficulty'
