--- a/integration-tests/load/functions/config.toml
+++ b/integration-tests/load/functions/config.toml
@@ -23,12 +23,12 @@ duration = "3m"
 [Common]
 # Polygon Mumbai only for now
 link_token_addr = "0x326C977E6efc84E512bB9C30f76E30c160eD06FB"
-coordinator_addr = "0x69b4C680209737B877c93327fC2144ec39eaC423"
-router_addr = "0xa4Ac8b863A6b4fB064B6bdF87aD61d389d97748d"
-client_addr = "0x6D1B0DeE1238d7b41f17B8f2027299AFEF575E14"
-don_id = "functions_staging_mumbai"
+coordinator_addr = "0x6D6a83BB356b7242E88C1A2b290102fde26590D0"
+router_addr = "0x2673266D3Cd08b53494B5a92B66DEec7F1408E7A"
+client_addr = "0xba20B879f33fae155c54c114A3a24d64a26Da02F"
+don_id = "fun-staging-mumbai-1"
 # comment it to automatically create and fund a new one
-subscription_id = 70
+subscription_id = 12
 # not used until we have full DON setup
 # node_funds = 10
 sub_funds = 10
