make HighestDifficulty the default NodeSelection algorithm for Polygon
retain SyncThreshold by bumping to 250/50 due to average block difficulty being 25/5 on mainnet/testnet

--- a/core/chains/evm/config/toml/defaults/Polygon_Mainnet.toml
+++ b/core/chains/evm/config/toml/defaults/Polygon_Mainnet.toml
@@ -37,4 +37,5 @@ HistoryDepth = 2000
 SamplingInterval = '1s'
 
 [NodePool]
-SyncThreshold = 10
+SyncThreshold = 250
+SelectionMode = 'TotalDifficulty'
