--- a/core/chains/evm/config/toml/defaults/Polygon_Mumbai.toml
+++ b/core/chains/evm/config/toml/defaults/Polygon_Mumbai.toml
@@ -28,4 +28,5 @@ HistoryDepth = 2000
 SamplingInterval = '1s'
 
 [NodePool]
-SyncThreshold = 10
+SyncThreshold = 50
+SelectionMode = 'TotalDifficulty'
