--- a/integration-tests/load/functions/config.toml
+++ b/integration-tests/load/functions/config.toml
@@ -22,13 +22,14 @@ duration = "3m"
 
 [Common]
 # Polygon Mumbai only for now
+don_id = "fun-staging-mumbai-1"
+gateway_url = "https://gateway-staging1.main.stage.cldev.sh"
 link_token_addr = "0x326C977E6efc84E512bB9C30f76E30c160eD06FB"
 coordinator_addr = "0x6D6a83BB356b7242E88C1A2b290102fde26590D0"
 router_addr = "0x2673266D3Cd08b53494B5a92B66DEec7F1408E7A"
-client_addr = "0xba20B879f33fae155c54c114A3a24d64a26Da02F"
-don_id = "fun-staging-mumbai-1"
-# comment it to automatically create and fund a new one
-subscription_id = 12
+# comment both client and sub to automatically create a new pair
+client_addr = "0xDba8Dfd4470E2c0C5FC0eF23Bc2B061023b7e073"
+subscription_id = 20
 # not used until we have full DON setup
 # node_funds = 10
 sub_funds = 10
