--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -110,6 +110,7 @@ jobs:
           echo "\`${GITHUB_SHA}\`" >>$GITHUB_STEP_SUMMARY
 
   build-test-image:
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'schedule' || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/'))
     environment: integration
     permissions:
       id-token: write
@@ -139,95 +140,95 @@ jobs:
           QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
           QA_AWS_ACCOUNT_NUMBER: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}
 
-  eth-smoke-tests-matrix:
-    environment: integration
-    permissions:
-      checks: write
-      pull-requests: write
-      id-token: write
-      contents: read
-    needs: [build-chainlink, changes, build-test-image]
-    env:
-      SELECTED_NETWORKS: SIMULATED,SIMULATED_1,SIMULATED_2
-      CHAINLINK_COMMIT_SHA: ${{ github.sha }}
-      CHAINLINK_ENV_USER: ${{ github.actor }}
-      TEST_LOG_LEVEL: debug
-    strategy:
-      fail-fast: false
-      matrix:
-        product:
-          - name: automation
-            nodes: 19
-            os: ubuntu-latest
-            pyroscope_env: ci-smoke-automation-evm-simulated
-          # temporarily disabled
-          # - name: ocr2vrf
-          #   nodes: 2
-          #   os: ubuntu-latest
-          #   pyroscope_env: ci-smoke-ocr2vrf-evm-simulated
-    runs-on: ${{ matrix.product.os }}
-    name: ETH Smoke Tests ${{ matrix.product.name }}
-    steps:
-      - name: Checkout the repo
-        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
-        with:
-          ref: ${{ github.event.pull_request.head.sha || github.event.merge_group.head_sha }}
-      ## Run this step when changes that require tests to be run are made
-      - name: Run Tests
-        if: needs.changes.outputs.src == 'true'
-        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@00c6214deb10a3f374c6d3430c32c5202015d463 # v2.2.12
-        env:
-          TESTCONTAINERS_RYUK_DISABLED: true
-          PYROSCOPE_SERVER: ${{ matrix.product.pyroscope_env == '' && '' || !startsWith(github.ref, 'refs/tags/') && '' || secrets.QA_PYROSCOPE_INSTANCE }} # Avoid sending blank envs https://github.com/orgs/community/discussions/25725
-          PYROSCOPE_ENVIRONMENT: ${{ matrix.product.pyroscope_env }}
-          PYROSCOPE_KEY: ${{ secrets.QA_PYROSCOPE_KEY }}
-        with:
-          test_command_to_run: make test_need_operator_assets && cd ./integration-tests && go test -timeout 30m -count=1 -json -test.parallel=${{ matrix.product.nodes }} ./smoke/${{ matrix.product.name }}_test.go 2>&1 | tee /tmp/gotest.log | gotestfmt
-          test_download_vendor_packages_command: cd ./integration-tests && go mod download
-          cl_repo: ${{ env.CHAINLINK_IMAGE }}
-          cl_image_tag: ${{ github.sha }}
-          aws_registries: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}
-          artifacts_location: ./integration-tests/smoke/logs
-          publish_check_name: EVM Smoke Test Results ${{ matrix.product.name }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          go_mod_path: ./integration-tests/go.mod
-          cache_key_id: core-e2e-${{ env.MOD_CACHE_VERSION }}
-          cache_restore_only: 'true'
-          QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
-          QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
-          QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
+  # eth-smoke-tests-matrix:
+  #   environment: integration
+  #   permissions:
+  #     checks: write
+  #     pull-requests: write
+  #     id-token: write
+  #     contents: read
+  #   needs: [build-chainlink, changes, build-test-image]
+  #   env:
+  #     SELECTED_NETWORKS: SIMULATED,SIMULATED_1,SIMULATED_2
+  #     CHAINLINK_COMMIT_SHA: ${{ github.sha }}
+  #     CHAINLINK_ENV_USER: ${{ github.actor }}
+  #     TEST_LOG_LEVEL: debug
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       product:
+  #         - name: automation
+  #           nodes: 19
+  #           os: ubuntu-latest
+  #           pyroscope_env: ci-smoke-automation-evm-simulated
+  #         # temporarily disabled
+  #         # - name: ocr2vrf
+  #         #   nodes: 2
+  #         #   os: ubuntu-latest
+  #         #   pyroscope_env: ci-smoke-ocr2vrf-evm-simulated
+  #   runs-on: ${{ matrix.product.os }}
+  #   name: ETH Smoke Tests ${{ matrix.product.name }}
+  #   steps:
+  #     - name: Checkout the repo
+  #       uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
+  #       with:
+  #         ref: ${{ github.event.pull_request.head.sha || github.event.merge_group.head_sha }}
+  #     ## Run this step when changes that require tests to be run are made
+  #     - name: Run Tests
+  #       if: needs.changes.outputs.src == 'true'
+  #       uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@00c6214deb10a3f374c6d3430c32c5202015d463 # v2.2.12
+  #       env:
+  #         TESTCONTAINERS_RYUK_DISABLED: true
+  #         PYROSCOPE_SERVER: ${{ matrix.product.pyroscope_env == '' && '' || !startsWith(github.ref, 'refs/tags/') && '' || secrets.QA_PYROSCOPE_INSTANCE }} # Avoid sending blank envs https://github.com/orgs/community/discussions/25725
+  #         PYROSCOPE_ENVIRONMENT: ${{ matrix.product.pyroscope_env }}
+  #         PYROSCOPE_KEY: ${{ secrets.QA_PYROSCOPE_KEY }}
+  #       with:
+  #         test_command_to_run: make test_need_operator_assets && cd ./integration-tests && go test -timeout 30m -count=1 -json -test.parallel=${{ matrix.product.nodes }} ./smoke/${{ matrix.product.name }}_test.go 2>&1 | tee /tmp/gotest.log | gotestfmt
+  #         test_download_vendor_packages_command: cd ./integration-tests && go mod download
+  #         cl_repo: ${{ env.CHAINLINK_IMAGE }}
+  #         cl_image_tag: ${{ github.sha }}
+  #         aws_registries: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}
+  #         artifacts_location: ./integration-tests/smoke/logs
+  #         publish_check_name: EVM Smoke Test Results ${{ matrix.product.name }}
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         go_mod_path: ./integration-tests/go.mod
+  #         cache_key_id: core-e2e-${{ env.MOD_CACHE_VERSION }}
+  #         cache_restore_only: 'true'
+  #         QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
+  #         QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
+  #         QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
 
-      ## Run this step when changes that do not need the test to run are made
-      - name: Run Setup
-        if: needs.changes.outputs.src == 'false'
-        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/setup-run-tests-environment@00c6214deb10a3f374c6d3430c32c5202015d463 # v2.2.12
-        with:
-          test_download_vendor_packages_command: cd ./integration-tests && go mod download
-          go_mod_path: ./integration-tests/go.mod
-          cache_key_id: core-e2e-${{ env.MOD_CACHE_VERSION }}
-          cache_restore_only: 'true'
-          QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
-          QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
-          QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
+  #     ## Run this step when changes that do not need the test to run are made
+  #     - name: Run Setup
+  #       if: needs.changes.outputs.src == 'false'
+  #       uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/setup-run-tests-environment@00c6214deb10a3f374c6d3430c32c5202015d463 # v2.2.12
+  #       with:
+  #         test_download_vendor_packages_command: cd ./integration-tests && go mod download
+  #         go_mod_path: ./integration-tests/go.mod
+  #         cache_key_id: core-e2e-${{ env.MOD_CACHE_VERSION }}
+  #         cache_restore_only: 'true'
+  #         QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
+  #         QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
+  #         QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
 
-      - name: Upload test log
-        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
-        if: failure()
-        with:
-          name: test-log-${{ matrix.product.name }}
-          path: /tmp/gotest.log
-          retention-days: 7
-        continue-on-error: true
-      - name: Collect Metrics
-        if: always()
-        id: collect-gha-metrics
-        uses: smartcontractkit/push-gha-metrics-action@d2c2b7bdc9012651230b2608a1bcb0c48538b6ec
-        with:
-          basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
-          hostname: ${{ secrets.GRAFANA_CLOUD_HOST }}
-          this-job-name: ETH Smoke Tests ${{ matrix.product.name }}
-          test-results-file: '{"testType":"go","filePath":"/tmp/gotest.log"}'
-        continue-on-error: true
+  #     - name: Upload test log
+  #       uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
+  #       if: failure()
+  #       with:
+  #         name: test-log-${{ matrix.product.name }}
+  #         path: /tmp/gotest.log
+  #         retention-days: 7
+  #       continue-on-error: true
+  #     - name: Collect Metrics
+  #       if: always()
+  #       id: collect-gha-metrics
+  #       uses: smartcontractkit/push-gha-metrics-action@d2c2b7bdc9012651230b2608a1bcb0c48538b6ec
+  #       with:
+  #         basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
+  #         hostname: ${{ secrets.GRAFANA_CLOUD_HOST }}
+  #         this-job-name: ETH Smoke Tests ${{ matrix.product.name }}
+  #         test-results-file: '{"testType":"go","filePath":"/tmp/gotest.log"}'
+  #        continue-on-error: true
 
   eth-smoke-tests-matrix-docker:
     environment: integration
@@ -286,6 +287,37 @@ jobs:
             nodes: 1
             os: ubuntu20.04-8cores-32GB
             pyroscope_env: ci-smoke-forwarder-ocr-evm-simulated
+          # Automation tests split out to use minimal environments
+          - name: automation-1
+            nodes: 1
+            os: ubuntu20.04-64cores-256GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationBasic|TestAutomationAddFunds)$'
+          - name: automation-2
+            nodes: 1
+            os: ubuntu20.04-64cores-256GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationPauseUnPause|TestAutomationRegisterUpkeep)$'
+          - name: automation-3
+            nodes: 1
+            os: ubuntu20.04-64cores-256GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationPauseRegistry|TestAutomationKeeperNodesDown)$'
+          - name: automation-4
+            nodes: 1
+            os: ubuntu20.04-64cores-256GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationPerformSimulation|TestAutomationCheckPerformGasLimit)$'
+          - name: automation-5
+            nodes: 1
+            os: ubuntu20.04-64cores-256GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestUpdateCheckData)$'
 
           # Keeper tests split out to use minimal environments
           - name: keeper-1
@@ -454,10 +486,10 @@ jobs:
     if: always()
     runs-on: ubuntu-latest
     name: ETH Smoke Tests
-    needs: [eth-smoke-tests-matrix,eth-smoke-tests-matrix-docker]
+    needs: [eth-smoke-tests-matrix-docker]
     steps:
       - name: Check smoke test matrix status
-        if: needs.eth-smoke-tests-matrix.result != 'success' || needs.eth-smoke-tests-matrix-docker.result != 'success'
+        if: needs.eth-smoke-tests-matrix-docker.result != 'success'
         run: exit 1
       - name: Collect Metrics
         if: always()
