add foundry refresh make command

--- a/contracts/GNUmakefile
+++ b/contracts/GNUmakefile
@@ -31,6 +31,15 @@ pnpmdep: ## Install solidity contract dependencies through pnpm
 abigen: ## Build & install abigen.
 	../tools/bin/build_abigen
 
+.PHONY: mockery
+mockery: $(mockery) ## Install mockery.
+	go install github.com/vektra/mockery/v2@v2.28.1
+
+.PHONY: foundry-refresh
+foundry-refresh:
+	foundryup
+	git submodule deinit -f .
+	git submodule update --init --recursive
 
 # To generate gethwrappers for a specific product, either set the `FOUNDRY_PROFILE`
 # env var or call the target with `FOUNDRY_PROFILE=product`
@@ -43,7 +52,7 @@ abigen: ## Build & install abigen.
 # make call example
 # 		make FOUNDRY_PROFILE=llo-feeds wrappers
 .PHONY: wrappers
-wrappers: pnpmdep abigen ## Recompiles solidity contracts and their go wrappers.
+wrappers: pnpmdep mockery abigen ## Recompiles solidity contracts and their go wrappers.
 	./scripts/native_solc_compile_all_$(FOUNDRY_PROFILE)
 	go generate ../core/gethwrappers/$(FOUNDRY_PROFILE)
 
@@ -51,7 +60,7 @@ wrappers: pnpmdep abigen ## Recompiles solidity contracts and their go wrappers.
 # assumption that native_solc_compile_all contains sub-calls to each product, and
 # go_generate does the same.
 .PHONY: wrappers-all
-wrappers-all: pnpmdep abigen ## Recompiles solidity contracts and their go wrappers.
+wrappers-all: pnpmdep mockery abigen ## Recompiles solidity contracts and their go wrappers.
 	# go_generate contains a call to  compile all contracts before generating wrappers
 	go generate ../core/gethwrappers/go_generate.go
 
