[VRF] opt out of snapshot checks

--- a/.github/workflows/solidity-foundry.yml
+++ b/.github/workflows/solidity-foundry.yml
@@ -72,6 +72,7 @@ jobs:
           FOUNDRY_PROFILE: ${{ matrix.product }}
 
       - name: Run Forge snapshot
+        if: ${{ !contains(fromJson('["vrf"]'), matrix.product) }}
         run: |
           forge snapshot --check gas-snapshots/${{ matrix.product }}.gas-snapshot
         id: snapshot
