--- a/integration-tests/load/functions/config.toml
+++ b/integration-tests/load/functions/config.toml
@@ -25,11 +25,11 @@ link_token_addr = "0x326C977E6efc84E512bB9C30f76E30c160eD06FB"
 coordinator_addr = "0x6D6a83BB356b7242E88C1A2b290102fde26590D0"
 router_addr = "0x2673266D3Cd08b53494B5a92B66DEec7F1408E7A"
 # comment both client and sub to automatically create a new pair
-client_addr = "0x64a351fbAa61681A5a7e569Cc5A691150c4D73D2"
-subscription_id = 23
+client_addr = "0x89D4b58D859a536D0B888ecD5093eF5FF9e4F977"
+subscription_id = 47
 sub_funds = 10
 
 functions_call_payload = "const response = await Functions.makeHttpRequest({ url: 'http://dummyjson.com/products/1' }); return Functions.encodeUint256(response.data.id)"
-#functions_call_payload = "return Functions.encodeUint256(BigInt(secrets.ltsecret))"
+#functions_call_payload = "return Functions.encodeString(JSON.stringify(secrets))"
 # uncomment to upload new secrets to s4
 #secrets = "{\"ltsecret\": \"1\"}"
