--- a/core/config/docs/secrets.toml
+++ b/core/config/docs/secrets.toml
@@ -51,9 +51,9 @@ AuthToken = "prometheus-token" # Example
 Username = "A-Mercury-Username" # Example
 # Password is used for basic auth of the Mercury endpoint
 Password = "A-Mercury-Password" # Example
-# URL is the Mercury endpoint URL used to access Mercury price feed
+# URL is the Mercury endpoint base URL used to access Mercury price feed
 URL = "https://example.com" # Example
-# URL is the Mercury legacy endpoint URL used to access Mercury v0.2 price feed
+# LegacyURL is the Mercury legacy endpoint base URL used to access Mercury v0.2 price feed
 LegacyURL = "https://example.v1.com" # Example
 
 [Threshold]
