Switch integration tests to nightly

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -3,8 +3,7 @@ on:
   merge_group:
   pull_request:
   schedule:
-    # - cron: "0 0 * * *"
-    - cron: "0 * * * *" # every hour while we debug for flakes
+    - cron: "0 0 * * *"
   push:
     tags:
       - "*"
