--- a/.github/workflows/operator-ui-cd.yml
+++ b/.github/workflows/operator-ui-cd.yml
@@ -1,4 +1,4 @@
-name: Operator UI
+name: Operator UI CD
 
 on:
   push:
@@ -6,10 +6,12 @@ on:
       - develop
   workflow_dispatch:
   schedule:
-    - cron: '0 */1 * * *' # Run every hour
+    - cron: "0 */1 * * *" # Run every hour
 
 jobs:
   update-version:
+    permissions:
+      id-token: write
     name: Update Version
     runs-on: ubuntu-latest
     steps:
@@ -22,10 +24,25 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./operator_ui/check.sh
 
+      - name: Assume role capable of dispatching action
+        uses: aws-actions/configure-aws-credentials@5fd3084fc36e372ff1fff382a39b10d03659f355 # v2.2.0
+        with:
+          role-to-assume: ${{ secrets.AWS_OIDC_CHAINLINK_CI_AUTO_PR_TOKEN_ISSUER_ROLE_ARN }}
+          role-duration-seconds: ${{ secrets.aws-role-duration-seconds }}
+          role-session-name: operator-ui-cd.update-version
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Get Github Token
+        id: get-gh-token
+        uses: smartcontractkit/chainlink-github-actions/github-app-token-issuer@chore/update-github-app-token-issuer
+        with:
+          url: ${{ secrets.AWS_INFRA_RELENG_TOKEN_ISSUER_LAMBDA_URL }}
+
       - name: Open PR
         uses: peter-evans/create-pull-request@38e0b6e68b4c852a5500a94740f0e535e0d7ba54 # v4.2.4
         with:
           title: Update Operator UI from ${{ steps.update.outputs.current_tag }} to ${{ steps.update.outputs.latest_tag }}
+          token: ${{ steps.get-gh-token.outputs.access-token }}
           branch: chore/update-operator-ui
           commit-message: Update Operator UI from ${{ steps.update.outputs.current_tag }} to ${{ steps.update.outputs.latest_tag }}
           body: ${{ steps.update.outputs.body }}
