--- a/core/chains/evm/config/toml/defaults/Base_Goerli.toml
+++ b/core/chains/evm/config/toml/defaults/Base_Goerli.toml
@@ -6,6 +6,7 @@ NoNewHeadsThreshold = '40s'
 MinIncomingConfirmations = 1
 
 [GasEstimator]
+Mode = 'OPStack'
 EIP1559DynamicFees = true
 PriceMin = '1 wei'
 BumpMin = '100 wei'
