Run linter only on PRs and scheduled runs

--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -18,6 +18,7 @@ on:
 
 jobs:
   golangci:
+    if: ${{ github.event_name == 'pull_request' ||  github.event_name == 'schedule' }}
     name: lint
     runs-on: ubuntu20.04-8cores-32GB
     steps:
