Try matrix logs

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -323,7 +323,7 @@ jobs:
           cl_repo: ${{ env.CHAINLINK_IMAGE }}
           cl_image_tag: ${{ github.sha }}
           aws_registries: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}
-          artifacts_location: ./integration-tests/smoke/logs
+          artifacts_location: ./integration-tests/smoke/logs/
           publish_check_name: ${{ matrix.product.name }}
           token: ${{ secrets.GITHUB_TOKEN }}
           go_mod_path: ./integration-tests/go.mod
@@ -350,7 +350,7 @@ jobs:
         if: failure()
         with:
           name: test-log-${{ matrix.product.name }}
-          path: /tmp/gotest.log
+          path: ./integration-tests/smoke/logs/
           retention-days: 7
         continue-on-error: true
       - name: Collect Metrics
