--- a/core/services/chainlink/testdata/config-multi-chain-effective.toml
+++ b/core/services/chainlink/testdata/config-multi-chain-effective.toml
@@ -35,13 +35,17 @@ LeaseRefreshInterval = '1s'
 [TelemetryIngress]
 UniConn = true
 Logging = false
-ServerPubKey = ''
-URL = ''
 BufferSize = 100
 MaxBatchSize = 50
 SendInterval = '500ms'
 SendTimeout = '10s'
 UseBatchSend = true
+
+[[TelemetryIngressEndpoint]]
+Network = ''
+ChainID = ''
+ServerPubKey = ''
+URL = ''
 
 [AuditLogger]
 Enabled = true
