Change config from TelemetryIngressEndpoint to TelemetryIngress.Endpoints

--- a/core/config/docs/core.toml
+++ b/core/config/docs/core.toml
@@ -99,7 +99,7 @@ SendTimeout = '10s' # Default
 # UseBatchSend toggles sending telemetry to the ingress server using the batch client.
 UseBatchSend = true # Default
 
-[[TelemetryIngressEndpoint]] # Example
+[[TelemetryIngress.Endpoints]] # Example
 # Network aka EVM, Solana, Starknet
 Network = 'EVM' # Example
 # ChainID of the network
